--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "electron:prod": "npm run build:prod && electron ./dist",
     "electron:linux": "npm run build:prod && npx electron-builder build --linux",
     "electron:windows": "npm run build:prod && npx electron-builder build --windows -p always",
+    "electron:windows2": "npm run build:prod && electron-builder build --windows -p always",
     "electron:mac": "npm run build:prod && npx electron-builder build --mac",
     "test": "karma start ./karma.conf.js",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet && npm run build",
